# a4c

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  main.cpp
include/: AINode.h  HTTPRequest.hpp  Node.h  ParseJSONNode.h  VariableNode.h  WorkFlowManager.h  inja.hpp  nodes.hpp
src/: AINode.cpp  Node.cpp  ParseJSONNode.cpp  VariableNode.cpp  WorkFlowManager.cpp
